@@ -1,3 +1,4 @@
+0.19.2-0 @10/28/2002 18:10:00 GMT@
 0.19.1-11 @10/28/2002 06:01:48 GMT@
 0.19.1-10 @10/27/2002 05:01:48 GMT@
 0.19.1-9 @10/26/2002 05:01:46 GMT@
