@@ -45,6 +45,10 @@
 /set type=dir mode=@DIR_PERMS@ uname=@OWNER_NAME@ gname=@GROUP_NAME@
 .
     include
+        boost
+            filesystem
+            ..
+        ..
         vpr
             DynLoad
             ..
